force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>FAC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>