force-app/main/default/objects/Invoice__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordenes de Despacho</fullName>
                <default>true</default>
                <label>Ordenes de Despacho</label>
            </value>
            <value>
                <fullName>Monto Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>