force-app/main/default/objects/Invoice__c/fields/Dispatch_Orders__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Orders__c</fullName>
    <label>Ordenes de Despacho</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>