force-app/main/default/objects/Invoice__c/fields/External_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Number__c</fullName>
    <label>Número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>