force-app/main/default/objects/Invoice__c/fields/External_Serie__c.field-meta.xml
<CustomField>
    <fullName>External_Serie__c</fullName>
    <label>Serie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>