force-app/main/default/objects/Invoice__c/fields/External_UUID__c.field-meta.xml
<CustomField>
    <fullName>External_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>