force-app/main/default/objects/Invoice__c/fields/Is_EInvoice__c.field-meta.xml
<CustomField>
    <fullName>Is_EInvoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es factura electrónica?</label>
    <type>Checkbox</type>
</CustomField>