force-app/main/default/objects/Invoice__c/fields/Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payment__c</fullName>
    <label>Abonos Parciales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>