force-app/main/default/objects/Invoice__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Orden de Compra</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>