force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Canceled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>